Portrait Card - make sure the left edge always aligns with the left edge of grid-container

--- a/foundation_cms/static/scss/blocks/themes/default/portrait_card_set.scss
+++ b/foundation_cms/static/scss/blocks/themes/default/portrait_card_set.scss
@@ -26,11 +26,6 @@ $carousel-transition: transform 0.3s ease;
     --card-radius: 5.75rem;
   }
 
-  // counter the medium-down-padding-0 full-bleed on the left by adding a small margin-left
-  @include breakpoint(medium down) {
-    margin-left: 1rem;
-  }
-
   border-radius: var(--card-radius);
 
   &__card-container {
